--- a/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
+++ b/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
@@ -1,18 +1,21 @@
+<main class="mr-15">
+  <div class="container-fluid">
 <div id="Tab3" class="tabcontent">
   <div class="tab-header">
-    <div class="tab-heading">Wireframe</div>
-    <div class="row pt-4" *ngIf="commonService.getRole() !='reviewer'" >
-      <label class="control-label col-sm-3" for="acname">Adobe XD link</label>
+    <div class="page-heading mt-0">Wireframe</div>
+    <div class="row" *ngIf="commonService.getRole() !='reviewer'" >
+      <label class="control-label col-sm-2" for="acname">Adobe XD link</label>
       <div class="col-sm-7">
         <input type="text" class="form-control bg-white" id="acname" [(ngModel)]="link" placeholder="Enter Link">
       </div>
-      <button class="btn button-save ml-5" (click)="onSaveLink()">{{method}}</button>
+      <button class="btn button-save" (click)="onSaveLink()">{{method}}</button>
     </div>
-
-    <hr>
-    <div class="row">
-        <iframe width="1300" height="500" id='iframe' [src]="iframeUrl"  frameborder="0"></iframe>
-
+    <div class="row mt-40">
+      <div class="col-sm-12">
+        <div class="iframe-container">
+        <iframe width="100%" height="500" id='iframe' [src]="iframeUrl"  frameborder="0"></iframe>
+      </div>
+      </div>
       <!-- <iframe width="1300" height="500"
       src="https://xd.adobe.com/embed/3b9d29ca-9012-4709-8a0a-b4866f42a2de-6ece/" 
       frameborder="0" ></iframe> -->
@@ -21,8 +24,8 @@
       <form class="form-horizontal" [formGroup]="formGroup">
       <div *ngIf="commonService.getRole() !='developer'" class="row pt-4">
 
-        <div class="col-sm-9">
-          <label class="control-label width-125 " for="cname">Review Comments</label>
+        <div class="col-sm-12">
+          <label class="control-label" for="cname">Review Comments</label>
           <textarea formControlName="reviewComment"  class="form-control rounded-0 bg-white" id="reviewComment" rows="3"
           [ngClass]=" { 'is-invalid' : submitted && f1.reviewComment.errors }"
           ></textarea>
@@ -34,18 +37,17 @@
       </div>
     </form>
       <div *ngIf="commonService.getRole() !='developer'" class="row pt-4">                            
-        <div class="col-sm-9 text-right ">
-            <button class="btn button-save ml-3" (click)="saveComments()">Save</button>
+        <div class="col-sm-12">
+            <button class="btn button-save" (click)="saveComments()">Save</button>
         </div>                                                       
     </div>
       <div class="clear-float"></div>
       <div *ngIf="commonService.getRole() =='idea-owner'" class="review-container">
-        <div class="heading wireframe_css wireframe_pt0_css">Request Review</div>
+        <div class="page-sub-heading section-spacing">Request Review</div>
         <div class="row">
           <div class="col-sm-3 pr-0">
             <div class="form-group">
-              <select class="form-control" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
-                \
+              <select class="txt-outline w-100" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
                 <option *ngFor="let item of reviewers" value={{item.userId}} id={{item.userId}}>{{item.userName}}
                 </option>
               </select>
@@ -54,7 +56,7 @@
           <div class="col-sm-2 pl-10 pb-20">
            <!--<button (click)="selectReviewer()" class="btn button-save">Select</button>
         --> 
-        <button (click)="mapReviewer()" class="btn button-save">Request Review</button>
+        <button (click)="mapReviewer()" class="btn btn-outline-purple">Request Review</button>
           </div>
         </div>
         <!--
@@ -72,8 +74,8 @@
           </div>
         </div>
         -->
-        <div class="row pl-3 pt-3">
-          <div class="heading wireframe_pt1_css wireframe_pt_20">Reviewers Assigned</div>
+        <div class="row pl-3">
+          <div class="control-label">Reviewers Assigned</div>
         </div>
         <div class="row" *ngIf="existingReviewer.length ==0">
           <div class="col-sm-12">
@@ -94,25 +96,25 @@
           </div>
         </div>
       </div>
-      <div  [ngClass]="{'wireframe_pt_20': commonService.getRole() !='idea-owner'}"  class="heading wireframe_css wireframe_pt1_css">Comments Received</div>
+      <div  [ngClass]="{'wireframe_pt_20': commonService.getRole() !='idea-owner'}"  class="page-sub-heading section-spacing">Comments Received</div>
       <table id="example" class="table">
         <thead>
           <tr>
-            <th></th>
+            <th>Edit</th>
             <th>Date</th>
             <th>Reviewer</th>
             <th>Comments</th>
             <th *ngIf="commonService.getRole() =='idea-owner'">Accept</th>
             <th *ngIf="commonService.getRole() =='idea-owner'">Reject</th>
             <th *ngIf="commonService.getRole() =='idea-owner'"> Assigned to</th>
-            <th>Status</th>
+            <th class="align-center">Status</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let commentsReceiveddtl of commentsReceived">
             <td>
               <a *ngIf="commentsReceiveddtl.commentStatus !='Closed' && ( commonService.getRole() =='idea-owner' ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='developer' &&  commentsReceiveddtl.commentStatus =='Allocated' ) ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='developer' &&  commentsReceiveddtl.commentStatus =='In-Progress' )  ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='reviewer' &&  commentsReceiveddtl.commentStatus =='Completed' ) ) "  (click)="editComments(commentsReceiveddtl)" style="cursor: pointer;">
-                <i class="fa fa-edit" style="font-size: 14px;"></i>
+                <img _ngcontent-oih-c96="" src="assets/images/edit-icon.svg" class="edit-icon">
               </a>
             </td>
             <td>{{commonService.convertDateTimeFormat(commentsReceiveddtl.enteredDate, 'true')}}</td>
@@ -135,3 +137,13 @@
         </tbody>
       </table>
     </div>
+  </div>
+  </div>
+  </div>
+  
+</main>
+  <footer>
+    <div class="container-fluid">
+        <div class="footer">©HiveZen.All rights reserved</div>
+    </div>
+  </footer>
