--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6311,6 +6311,9 @@ hr {
 .mt-10 {
   margin-top: 10px !important;
 }
+.mt-15 {
+  margin-top: 15px !important;
+}
 .ml-10 {
   margin-left: 10px;
 }
