--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -7397,3 +7397,14 @@ sup {
   padding-top: 6px;
   font-weight: 100;
 }
+.ng-image-fullscreen-view .lightbox-wrapper
+{
+    background-color: #f4f7f9 !important;
+}
+.swal2-styled.swal2-confirm{
+    background-color:#72308b !important;
+    border: 0px solid none !important;
+}
+.swal2-actions:not(.swal2-loading) .swal2-styled:hover{
+    background-image: none !important;
+}
