--- a/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
+++ b/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
@@ -41,7 +41,7 @@
         <div class="col-sm-5" style="padding: 0px;">
             <div class="dialog-right">
                 <img src="assets/images/signup-2.png" class="mt-50">
-                <div class="mt-50">Fill in your details so<br>you can login later</div>
+                <div class="mt-50">Please fill in your details so<br>you can login later</div>
                 <div class="copy-rights mt-20">&copy; HiveZen, All rights reserved</div>
             </div>
         </div>
