--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -3,7 +3,7 @@
 </nav>
 <main>
   <div class="container-fluid">
-    <div class="heading"><span>Log In </span>to your Account</div>
+    <div class="heading"><span>Log In </span>to your account</div>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" id="Login">
       <div class="row">
         <div class="col-sm-4"></div>
@@ -67,7 +67,7 @@
           </div>
           <div class="row pb-40">
             <div class="col-sm-12">
-              <div class="text-center">Don't have an account yet? <a style="cursor: pointer;"><span (click)="signup()"  class="txt-purple" data-toggle="modal"
+              <div class="text-center">Don't have an account yet? <a style="cursor: pointer;"><span (click)="signup()"  class="txt-purple font-bold" data-toggle="modal"
                   data-target="#exampleModalCenter1">Sign up</span></a></div>
             </div>
           </div>
