--- a/src/app/console/forgot-password/forgot-password.component.html
+++ b/src/app/console/forgot-password/forgot-password.component.html
@@ -4,10 +4,10 @@
            <img src="assets/images/close-popup.png">
           </button>
           <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-12">
                 <div class="dialog-left"> 
                         <div class="heading"><span>Forgot Password</span></div>
-                        <form [formGroup]="form" (ngSubmit)="forgotPassword()" id="Signup">
+                        <form autocomplete="off" [formGroup]="form" (ngSubmit)="forgotPassword()" id="Signup">
                         <div class="row pt-50">                        
                             <div class="col-sm-12"><div class="txt-lable">Email*</div></div>
                             <div class="col-sm-12"><input type="text" class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
@@ -23,6 +23,7 @@
                         </form>   
                 </div>
             </div>
+            <!--
             <div class="col-sm-5" style="padding: 0px;">
                 <div class="dialog-right">
                     <img src="assets/images/signup-1.png" class="mt-50">
@@ -30,5 +31,6 @@
                     <div class="copy-rights">&copy; HiveZen, All rights reserved</div>
                 </div>
             </div>
+            -->
         </div>
     </div>
