--- a/src/app/subscription/purchase-subscription/purchase-subscription.component.html
+++ b/src/app/subscription/purchase-subscription/purchase-subscription.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row purchase-subscription mt-5">
             <div class="col-sm-2"></div>
-            <div class="col-sm-2">
+            <div  style="top: 45%;position: absolute;" class="col-sm-2">
                
                 <div class="purchase-container">
                     <p *ngFor="let subscriptionFeaturesObj of subscriptionFeatures;let ix = index;" 
