--- a/src/app/work-space/work-space-upload-image/work-space-upload-image.component.html
+++ b/src/app/work-space/work-space-upload-image/work-space-upload-image.component.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <form class="form-horizontal" [formGroup]="formGroup" (ngSubmit)="Save()">
+        <form autocomplete="off" class="form-horizontal" [formGroup]="formGroup" (ngSubmit)="Save()">
 
             <div class="form-group">
 
