--- a/src/app/subscription/expand-your-team/expand-your-team.component.html
+++ b/src/app/subscription/expand-your-team/expand-your-team.component.html
@@ -8,7 +8,7 @@
         <div class="heading"><span>Expand your team</span></div>
         <div class="sub-heading" style="font-weight: inherit;">Invite your teammates and build your workflows together
         </div>
-        <form [formGroup]="form" (ngSubmit)="onInvite()">
+        <form  autocomplete="off" [formGroup]="form" (ngSubmit)="onInvite()">
           <div class="row pt-50">
             <!--
               <div class="col-sm-12">
