--- a/src/app/work-space/work-space-edit-estimation-details/work-space-edit-estimation-details.component.html
+++ b/src/app/work-space/work-space-edit-estimation-details/work-space-edit-estimation-details.component.html
@@ -2,7 +2,7 @@
     <button type="button" class="close dialog-close" data-dismiss="modal" aria-label="Close" (click)="Close()">
        <img src="assets/images/close-popup.png">
       </button>
-      <form class="form-horizontal" [formGroup]="formGroup">
+      <form autocomplete="off" class="form-horizontal" [formGroup]="formGroup">
       <div class="row">
         <div class="col-sm-12">
             <div class="dialog-left"> 
