--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -48,7 +48,7 @@
               <hr>
             </div>
             <div class="col-sm-4 mb-30">
-              <div class="mtb-20 text-center">Or Sign in with</div>
+              <div class="mtb-20 text-center">or Sign in with</div>
             </div>
             <div class="col-sm-4">
               <hr>
