--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6317,6 +6317,9 @@ hr {
 .mt-10 {
   margin-top: 10px !important;
 }
+.mt-90 {
+  margin-top: 90px !important;
+}
 .mt-15 {
   margin-top: 15px !important;
 }
