--- a/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
+++ b/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
@@ -6,26 +6,26 @@
         <div class="col-sm-7">
             <div class="dialog-left"> 
                     <div class="heading"><span>Setup your account</span></div>
-                    <div class="sub-heading" style="font-weight: inherit;">Let's get started with a few simple steps</div>
+                    <div class="sub-heading-sm">Let's get started with a few simple steps</div>
                     <form autocomplete="off" [formGroup]="signupForm"  (ngSubmit)="signup()" id="Signup">
-                    <div class="row pt-50">
+                    <div class="row mt-30">
                         <div class="col-sm-12"><div class="txt-lable">Full Name*</div></div>
-                        <div class="col-sm-12"><input autocomplete="off" type="text" class="form-control bg-white" id="FullName" placeholder="Enter full name"
+                        <div class="col-sm-12"><input autocomplete="off" type="text" class="txt-outline w-100" id="FullName" placeholder="Enter full name"
                         formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f1.firstName.errors }">
                         <div *ngIf="submitted && f1.firstName.errors" class="invalid-feedback">
                             <div *ngIf="f1.firstName.errors.required">Full Name is required</div>
                           </div>
                     </div>
-                        <div class="col-sm-12"><div class="txt-lable">Password*</div></div>
-                        <div class="col-sm-12"><input name="password" autocomplete="off" type="text" class="form-control password bg-white" id="Password" placeholder="Password"
+                        <div class="col-sm-12 mt-10"><div class="txt-lable">Password*</div></div>
+                        <div class="col-sm-12"><input name="password" autocomplete="off" type="text" class="txt-outline w-100 password" id="Password" placeholder="Password"
                         formControlName="password" [ngClass]="{ 'is-invalid': submitted && f1.password.errors }">
                         <div *ngIf="submitted && f1.password.errors" class="invalid-feedback">
                             <div *ngIf="f1.password.errors.required">Password is required</div>
                           </div>
                     </div>
-                        <div class="col-sm-12"><div class="txt-lable">Account Name*</div></div>
+                        <div class="col-sm-12 mt-10"><div class="txt-lable">Account Name*</div></div>
                         <div class="input-group col-sm-12">
-                            <input autocomplete="off" type="text" class="form-control bg-white" id="AccountName" placeholder="Enter your Account Name"
+                            <input autocomplete="off" type="text" class="txt-outline" id="AccountName" placeholder="Enter your Account Name"
                         formControlName="micrositeName" [ngClass]="{ 'is-invalid': submitted && f1.micrositeName.errors }">
                         <span class="input-group-text" id="basic-addon2">.hivezen.com</span>
                         <div *ngIf="submitted && f1.micrositeName.errors" class="invalid-feedback">
@@ -33,15 +33,15 @@
                           </div>
                     </div>
                         <div class="col-sm-12 pt-20"><div class="font-12 text-center"><input type="checkbox" id ="chkTems" class="txt-outline"><span class="txt-gray"> I agree to the <span class="txt-purple" style="cursor: pointer;" (click)="termsCondition()">Terms of Service</span> and <span class="txt-purple" style="cursor: pointer;" (click)="privacyPolicy()">Privacy Policy</span></span></div></div>  
-                        <div class="col-sm-12 pt-20"><button  class="btn button-save mt-5 w100">Sign up</button></div>
+                        <div class="col-sm-12 pt-20"><button  class="btn button-save w100">Sign up</button></div>
                     </div>
                 </form>
             </div>
         </div>
         <div class="col-sm-5" style="padding: 0px;">
             <div class="dialog-right">
-                <img src="assets/images/signup-2.png" class="mt-50">
-                <div class="mt-50">Please fill in your details so<br>you can login later</div>
+                <img src="assets/images/signup-2.png" class="mt-90">
+                <div class="mt-50 font-bold">Please fill in your details so<br>you can login later</div>
                 <div class="copy-rights mt-20">&copy; HiveZen, All rights reserved</div>
             </div>
         </div>
