--- a/src/app/console/forgot-password/forgot-password.component.html
+++ b/src/app/console/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
                 <div class="dialog-left"> 
                         <div class="heading"><span>Forgot Password</span></div>
                         <form autocomplete="off" [formGroup]="form" (ngSubmit)="forgotPassword()" id="Signup">
-                        <div class="row pt-50">                        
+                        <div class="row mt-30">                        
                             <div class="col-sm-12"><div class="txt-lable">Email*</div></div>
                             <div class="col-sm-12"><input type="text" class="form-control bg-white" formControlName="email" id="email" placeholder="Enter email"
                                 [ngClass]="{ 'is-invalid': submitted && f1.email.errors }">
@@ -18,7 +18,7 @@
                                   </div>
                             
                             </div>
-                            <div class="col-sm-12 pt-20"><button class="btn button-save mt-5 w100" >Forgot Password</button></div>
+                            <div class="col-sm-12 pt-20"><button class="btn button-save w100" >Forgot Password</button></div>
                         </div>
                         </form>   
                 </div>
